minio/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
  - name: object-storage
    port: 9000
    targetPort: object-storage
  - name: console
    port: 8080
    targetPort: console
