minio/base/console-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-console
spec:
  port:
    targetPort: console
  to:
    kind: "Service"
    name: minio
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
